persistent exchange - only concurent usage

--- a/src/data/app/ix-blazor/librarytemplate.blazor/Pages/TestingPersistentData.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Pages/TestingPersistentData.razor
@@ -30,17 +30,17 @@
 
 
 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;">
-    <div>
+   @*  <div>
         <h2>Commands</h2>
         <ul class="list-group">
             <li class="list-group-item">
-                <RenderableContentControl Context="@Entry.Plc.AxoDataPersistentContext.ManagerUsage" Presentation="Command-Control" />
+              <RenderableContentControl Context="@Entry.Plc.AxoDataPersistentContext.ConcurrentMangerUsage" Presentation="Command-Control" />
             </li>
             <li class="list-group-item">
                 <RenderableContentControl Context="@Entry.Plc.AxoDataPersistentContext.DataManager.Operation" Presentation="Command" />
             </li>
         </ul>
-    </div>
+    </div> *@
 
     <div>
         <h2>Concurrent Commnads</h2>
