--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -15,5 +15,5 @@
       DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity">
 </Unit>
 
-<VisualComposerContainer ImgSrc="logo-header.svg" AxoObject="Entry.Plc.Context.StarterUnitTemplate"/>
+<VisualComposerContainer ImgSrc="logo-header.svg" Objects="@(new [] { Entry.Plc.Context.StarterUnitTemplate })"/>
     
