--- a/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Documentation.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Documentation.razor
@@ -2,4 +2,12 @@
 
 <PageTitle>Documentation</PageTitle>
 
-@*<RenderableContentControl Context="@Entry.Plc.documentation" Presentation="Command-Control" PollingInterval="100"/>*@
+<style>
+    .full-size-iframe {
+        width: 100%;
+        height: 100vh; /* This will make the iframe take the full height of the viewport */
+        border: none; /* Removes the border */
+    }
+</style>
+
+<iframe class="full-size-iframe" src="https://ix-ax.github.io/AXOpen/data/docs/index.html"></iframe>
