fixing user managment

--- a/src/security/src/AXOpen.Security.Blazor/Views/AccountManagementView.razor
+++ b/src/security/src/AXOpen.Security.Blazor/Views/AccountManagementView.razor
@@ -86,7 +86,7 @@
 
     private async void OnValidUpdate()
     {
-        User _user = await _userManager.FindByIdAsync(_model.Username);
+        User _user = await _userManager.FindByNameAsync(_model.Username);
 
         if (_model.CanUserChangePassword && _model.OldPassword != null && _model.OldPassword != "" && _model.Password != null && _model.Password != "" && _model.ConfirmPassword != null && _model.ConfirmPassword == _model.Password)
         {
@@ -110,7 +110,7 @@
     {
         _model = new ManageUserModel();
 
-        User _user = await _userManager.FindByIdAsync(_authenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.Name);
+        User _user = await _userManager.FindByNameAsync(_authenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.Name);
 
         _model.Username = _user.UserName;
         _model.Group = _user.Group;
