--- a/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.festo.drives/app/ix-blazor/Pages/Component_1.razor
@@ -8,7 +8,7 @@
     #region WriteTaskDurationToConsole
     private async Task WriteTaskTimesToConsole()
     {
-        await Entry.Plc.documentation.componentOne.AxoCmmtAsDrive_.WriteTaskDurationToConsole();
+        await Entry.Plc.documentation.componentOne.AxoCmmtAsPtP_.WriteTaskDurationToConsole();
     }
     #endregion
 
