--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -15,5 +15,5 @@
       DataHeader="Entry.Plc.Context.StarterUnitTemplateProcessData.Shared.Entity">
 </Unit>
 
-<VisualComposerContainer Objects="@(new [] { Entry.Plc.Context.StarterUnitTemplate })"/>
+<VisualComposerContainer Objects="@(new AXSharp.Connector.ITwinObject[] { Entry.Plc.Context.StarterUnitTemplate, Entry.Plc.Context.UnitTemplate })" Id="1" />
     
