[wip] adds visual composer to each sequence in unitview

--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -14,7 +14,7 @@
 
 <body>
     <div class="content-wrapper">
-        <UnitsSequences Component="@this.Component"></UnitsSequences>
+        <UnitsSequences Component="@this.Component" ObjectCollection="new ITwinObject[]{this.Data, this.DataManger, this.TechnologySettings, this.Component}"></UnitsSequences>
         <UnitsService ServiceTask="((dynamic)this.Component).ServiceMode" Components="((dynamic)this.Component).UnitObjects.Components"></UnitsService>
     </div>
 </body>
