--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -9,7 +9,7 @@
                 <img id="@_imgId" src="@ImgSrc" style="width: 100%; height: 100%; object-fit: cover;" />
             }
 
-            <div class="dropdown position-absolute" style="left: 97%; top: 0%; translate: -100% -50%;">
+            <div class="dropdown position-absolute" style="z-index: 100; left: 97%; top: 0%; translate: -100% -50%;">
                 <a class="dropdown-toggle text-decoration-none text-black" style="cursor: pointer;" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="bi bi-pencil-square fs-4" aria-hidden="true" />
                 </a>
@@ -24,7 +24,7 @@
                 </ul>
             </div>
 
-            <div class="position-absolute" style="left: 90%; top: 0%; translate: -100% -50%;">
+            <div class="position-absolute" style="z-index: 100; left: 90%; top: 0%; translate: -100% -50%;">
                 <select class="form-select w-auto" @onchange="(ChangeEventArgs args) => Load(args.Value.ToString())">
                     @foreach (var item in GetAllFiles())
                     {
