--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -1,9 +1,14 @@
 ﻿@using AXSharp.Connector;
 @using Microsoft.AspNetCore.Components.Forms;
 
+@* <div id="zoomAndMoveContainer" style="overflow: hidden; position: relative; width: 100%; height: 50%;">
+    <div style="width: 200px; height: 200px; background-color: lime;"></div>
+    <div style="width: 200px; height: 200px; background-color: red;"></div>
+</div> *@
+
 <AuthorizeView Roles="Administrator">
     <Authorized>
-        <div style="position: relative; width: 100%; height: 100%;" ondragover="event.preventDefault();">
+        <div id="zoomAndMoveContainer" style="position: relative; width: 100%; height: 100%;" ondragover="event.preventDefault();">
             @if(_imgId != null)
             {
                 <img id="@_imgId" src="@ImgSrc" style="width: 100%; height: 100%; object-fit: cover;" />
@@ -211,3 +216,5 @@
         </div>
     </NotAuthorized>
 </AuthorizeView>
+
+<script type="text/javascript" src="./_content/AXOpen.VisualComposer/VisualComposerContainer.razor.js"></script>
