--- a/src/templates.simple/axpansion/server/Components/UnitsSequences.razor
+++ b/src/templates.simple/axpansion/server/Components/UnitsSequences.razor
@@ -8,8 +8,9 @@
         <h1>@Component.AttributeName</h1>
     </div>
     <!-- TOP LEVEL TASKS -->
-    <div class="d-flex justify-content-end">
-        @foreach (var task in this.Component.GetChildren().OfType<AxoTask>())
+    <div class="d-flex justify-content-end">    
+                 
+        @foreach (var task in this.Component.GetChildren().OfType<IModeContainer>().Where(p => p is AxoTask).Select(p => p as AxoTask))
         {
             <div>
                 <AuthorizeView Roles="can_run_automat_mode">
@@ -38,16 +39,21 @@
                     </div>
 
                     <a class="btn btn-primary ms-1 d-flex align-items-center" role="button" @onclick="Collapse">
-                        <span class="bi-chevron-down d-inline-block collapsible @(_isCollapsed ? null : "open")" />
+                        <span class="bi-chevron-down d-inline-block collapsible @(_isCollapsed ? "show" : "open")" />
                     </a>
                 </div>
 
-                <div class="@(_isCollapsed ? "collapse" : null)">
-                    <AxoSequencerView Component="@axoSequencer" HasTaskControlButton="false"></AxoSequencerView>
-                </div>
+                @if (!_isCollapsed)
+                {
+                    <div>
+                        <AxoSequencerView Component="@axoSequencer" HasTaskControlButton="false"></AxoSequencerView>
+                    </div>
+                }
+
                 <div class="m-5">
                     <VisualComposerContainer Objects="@ObjectCollection" />
                 </div>
+
             }
         }
     </div>
