--- a/src/components.festo.drives/app/ix-blazor/Pages/Documentation.razor
+++ b/src/components.festo.drives/app/ix-blazor/Pages/Documentation.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Documentation"
 @using AXOpen.Core;
 
+<Component_3></Component_3>
 <Component_1></Component_1>
 <Component_2></Component_2>
 
