--- a/src/components.festo.drives/app/ix-blazor/Shared/NavMenu.razor
+++ b/src/components.festo.drives/app/ix-blazor/Shared/NavMenu.razor
@@ -25,6 +25,21 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Component_3">
+                <span class="oi oi-plus" aria-hidden="true"></span> FestoPLCopen
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Component_1">
+                <span class="oi oi-plus" aria-hidden="true"></span> FestoPtp
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Component_2">
+                <span class="oi oi-plus" aria-hidden="true"></span> Rexroth
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="security">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Security
             </NavLink>
